--- a/stylesheets/cardstyle.css
+++ b/stylesheets/cardstyle.css
@@ -9,15 +9,13 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: #009938;
     align-items: center;
     justify-content: center;
     text-align: center;
     overflow-x: hidden;
-    background-color: rgba(255, 255, 255, 1);
+    background: linear-gradient(to top, rgb(0, 0, 0) 5%, rgb(114, 0, 40) 50%, rgb(0, 0, 0) 95% );
     flex-direction: column;
     border-radius: 10px;
-    box-shadow: 0 0 0 8px rgba(255, 255, 255, 0.2);
     height: 500px;
     width: 60%;
     padding: 20px;
@@ -27,9 +25,21 @@ body {
     z-index: 9;
 }
 
+.doc-cover {
+    width: 100%;
+    height: 100%;
+    position:absolute;
+    top: 0px;
+    left: 0px;
+    color:black;
+    background-color:black;
+    z-index: 8;
+    opacity: 0.7;
+}
+
 .closebutton {
     background: none;
-    color: black;
+    color: rgb(95, 95, 95);
     border: 0;
     height:20%;
     width: 10%;
@@ -83,7 +93,7 @@ body {
     position: absolute;
     bottom: 0;
     font-size: 22px;
-    font-weight: 700;
+    font-weight: 800;
     text-align: center;
     white-space: nowrap;
     transform: translateY(-10px) translateX(-50%);
@@ -93,9 +103,9 @@ body {
 .card-jobtitle {
     position: absolute;
     bottom: 0;
-    font-size: 11px;
+    font-size: 14px;
     white-space: nowrap;
-    font-weight: 500;
+    font-weight: 600;
     opacity: 0.7;
     text-transform: uppercase;
     letter-spacing: 1.5px;
@@ -105,7 +115,9 @@ body {
 }
 
 .card-main {
+    height: 255px;
     padding-top: 10px;
+    margin-bottom: 10px;
 }
 
 .card-social {
@@ -113,6 +125,9 @@ body {
     align-items: center;
     padding-top: 20px;
     margin-bottom: 30px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 .card-item-title {
@@ -125,4 +140,9 @@ body {
     color: #6f6f7b;
     line-height: 1.5;
     font-family: "DM Sans", sans-serif;
+}
+
+.card-nav{
+    position: relative;
+    bottom:0px;
 }
