--- a/stylesheets/cardstyle.css
+++ b/stylesheets/cardstyle.css
@@ -28,121 +28,125 @@ body {
 .doc-cover {
     width: 100%;
     height: 100%;
-    position:absolute;
+    position: absolute;
     top: 0px;
     left: 0px;
-    color:black;
-    background-color:black;
     z-index: 8;
     opacity: 0.7;
+    background-color: black;
+}
+@media (max-width: 980px) {
+    .doc-cover {
+        clip-path: inset(5em);
+    }
 }
 
-.closebutton {
-    background: none;
-    color: rgb(95, 95, 95);
-    border: 0;
-    height:20%;
-    width: 10%;
-    position: absolute;
-    top: -15px;
-    right: -20px;
-    line-height: 1;
-    padding: 0;
-    appearance: none;
-    cursor: pointer;
-    outline: inherit;
-}
+    .closebutton {
+        background: none;
+        color: rgb(95, 95, 95);
+        border: 0;
+        height: 20%;
+        width: 10%;
+        position: absolute;
+        top: -15px;
+        right: -20px;
+        line-height: 1;
+        padding: 0;
+        appearance: none;
+        cursor: pointer;
+        outline: inherit;
+    }
 
-.card-header {
-    position: relative;
-    display: flex;
-    height: 200px;
-    flex-shrink: 0;
-    width: 100%;
-}
+    .card-header {
+        position: relative;
+        display: flex;
+        height: 200px;
+        flex-shrink: 0;
+        width: 100%;
+    }
 
-.card-cover {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    height: 160px;
-    top: -20%;
-    left: 0;
-    will-change: top;
-    background-size: cover;
-    background-position: center;
-    filter: blur(30px);
-    transform: scale(1.2);
-    transition: 0.5s;
-}
+    .card-cover {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        height: 160px;
+        top: -20%;
+        left: 0;
+        will-change: top;
+        background-size: cover;
+        background-position: center;
+        filter: blur(30px);
+        transform: scale(1.2);
+        transition: 0.5s;
+    }
 
-.card-avatar {
-    width: 100px;
-    height: 100px;
-    box-shadow: 0 8px 8px rgba(0, 0, 0, 0.2);
-    border-radius: 50%;
-    object-position: center;
-    object-fit: cover;
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%) translateY(-64px);
-}
+    .card-avatar {
+        width: 100px;
+        height: 100px;
+        box-shadow: 0 8px 8px rgba(0, 0, 0, 0.2);
+        border-radius: 50%;
+        object-position: center;
+        object-fit: cover;
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%) translateY(-64px);
+    }
 
-.card-fullname {
-    position: absolute;
-    bottom: 0;
-    font-size: 22px;
-    font-weight: 800;
-    text-align: center;
-    white-space: nowrap;
-    transform: translateY(-10px) translateX(-50%);
-    left: 50%;
-}
+    .card-fullname {
+        position: absolute;
+        bottom: 0;
+        font-size: 22px;
+        font-weight: 800;
+        text-align: center;
+        white-space: nowrap;
+        transform: translateY(-10px) translateX(-50%);
+        left: 50%;
+    }
 
-.card-jobtitle {
-    position: absolute;
-    bottom: 0;
-    font-size: 14px;
-    white-space: nowrap;
-    font-weight: 600;
-    opacity: 0.7;
-    text-transform: uppercase;
-    letter-spacing: 1.5px;
-    margin: 0;
-    left: 50%;
-    transform: translateX(-50%) translateY(-7px);
-}
+    .card-jobtitle {
+        position: absolute;
+        bottom: 0;
+        font-size: 14px;
+        white-space: nowrap;
+        font-weight: 600;
+        opacity: 0.7;
+        text-transform: uppercase;
+        letter-spacing: 1.5px;
+        margin: 0;
+        left: 50%;
+        transform: translateX(-50%) translateY(-7px);
+    }
 
-.card-main {
-    height: 255px;
-    padding-top: 10px;
-    margin-bottom: 10px;
-}
+    .card-main {
+        height: 255px;
+        padding-top: 10px;
+        margin-bottom: 10px;
+    }
 
-.card-social {
-    display: flex;
-    align-items: center;
-    padding-top: 20px;
-    margin-bottom: 30px;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-}
+    .card-social {
+        display: flex;
+        align-items: center;
+        padding-top: 20px;
+        margin-bottom: 30px;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
 
-.card-item-title {
-    font-size: 14px;
-    font-weight: bold;
-}
+    .card-item-title {
+        font-size: 14px;
+        font-weight: bold;
+    }
 
-.card-item-desc {
-    font-size: 13px;
-    color: #6f6f7b;
-    line-height: 1.5;
-    font-family: "DM Sans", sans-serif;
-}
+    .card-item-desc {
+        font-size: 13px;
+        color: #6f6f7b;
+        line-height: 1.5;
+        font-family: "DM Sans", sans-serif;
+    }
 
-.card-nav{
-    position: relative;
-    bottom:0px;
-}
+    .card-nav {
+        position: relative;
+        bottom: 0px;
+    }
