--- a/stylesheets/pagestyle.css
+++ b/stylesheets/pagestyle.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Georgia');
 
 :root {
     --primary-color: #3a4052;
@@ -6,18 +6,18 @@
 
 * {
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     line-height: 1.5;
     overflow-y: hidden;
     overflow-x: hidden;
-}
-
-a {
-    text-decoration: none;
-    color: var(--primary-color);
+    display: flex;
+    padding: 20px;
+    height: 100%;
 }
 
 h1 {
@@ -25,10 +25,25 @@ h1 {
     font-size: 60px;
     line-height: 1.2;
     margin-bottom: 15px;
+    padding-bottom: 25px;
+}
+
+h2 {
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 1.2;
+    padding-bottom: 10px;
+}
+
+p {
+    text-decoration: none;
+    color: #fff;
+    font-size:16px;
 }
 
 .showcase {
     height: 100vh;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -72,16 +87,106 @@ h1 {
 }
 
 .btn {
+    position: relative;
     display: inline-block;
     padding: 10px 30px;
-    background: var(--primary-color);
+    margin-bottom: 50px;
+    background: none;
     color: #fff;
-    border-radius: 5px;
-    border: solid #fff 1px;
+    border: solid #fff 0px;
     margin-top: 25px;
-    opacity: 0.7;
-    
+    transition: 0.5s;
+    overflow: hidden;
+    cursor: pointer;
 }
     .btn:hover {
-        transform: scale(0.98);
+        background: #03e9f4;
+        color: #050801;
+        box-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4, 0 0 50px #03e9f4, 0 0 200px #03e9f4;
+        -webkit-box-reflect: below 1px linear-gradient(transparent, #0005);
     }
+    
+button:nth-child(1) {
+    filter: hue-rotate(270deg);
+}
+button:nth-child(2) {
+    filter: hue-rotate(110deg);
+}
+
+button span {
+    position: absolute;
+    display: block;
+}
+    button span:nth-child(1) {
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        background: linear-gradient(90deg,transparent,#03e9f4);
+        animation: animate1 1s linear infinite;
+    }
+    button span:nth-child(2) {
+        top: -100%;
+        right: 0;
+        width: 2px;
+        height: 100%;
+        background: linear-gradient(180deg,transparent,#03e9f4);
+        animation: animate2 1s linear infinite;
+        animation-delay: 0.25s;
+    }
+    button span:nth-child(3) {
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        height: 2px;
+        background: linear-gradient(270deg,transparent,#03e9f4);
+        animation: animate3 1s linear infinite;
+        animation-delay: 0.50s;
+    }
+    button span:nth-child(4) {
+        bottom: -100%;
+        left: 0;
+        width: 2px;
+        height: 100%;
+        background: linear-gradient(360deg,transparent,#03e9f4);
+        animation: animate4 1s linear infinite;
+        animation-delay: 0.75s;
+    }
+
+@keyframes animate1 {
+    0% {
+        left: -100%;
+    }
+
+    50%,100% {
+        left: 100%;
+    }
+}
+@keyframes animate2 {
+    0% {
+        top: -100%;
+    }
+
+    50%,100% {
+        top: 100%;
+    }
+}
+@keyframes animate3 {
+    0% {
+        right: -100%;
+    }
+
+    50%,100% {
+        right: 100%;
+    }
+}
+@keyframes animate4 {
+    0% {
+        bottom: -100%;
+    }
+
+    50%,100% {
+        bottom: 100%;
+    }
+}
+    
