--- a/stylesheets/pagestyle.css
+++ b/stylesheets/pagestyle.css
@@ -13,31 +13,23 @@
 body {
     font-family: Georgia, 'Times New Roman', Times, serif;
     line-height: 1.5;
-    overflow-y: hidden;
-    overflow-x: hidden;
-    display: flex;
     padding: 20px;
     height: 100%;
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 h1 {
     font-weight: 300;
-    font-size: 60px;
+    font-size: 4em;
     line-height: 1.2;
     margin-bottom: 15px;
     padding-bottom: 25px;
 }
-
 h2 {
     font-size: 20px;
     font-weight: 300;
     line-height: 1.2;
-}
-
-p {
-    text-decoration: none;
-    color: #fff;
-    font-size:16px;
 }
 
 a {
@@ -89,26 +81,6 @@ a {
     z-index: 2;
 }
 
-.btn {
-    position: relative;
-    display: inline-block;
-    padding: 10px 30px;
-    margin-bottom: 50px;
-    background: none;
-    color: #fff;
-    border: solid #fff 0px;
-    margin-top: 10px;
-    transition: 0.5s;
-    overflow: hidden;
-    cursor: pointer;
-}
-    .btn:hover {
-        background: #03e9f4;
-        color: #050801;
-        box-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4, 0 0 50px #03e9f4, 0 0 200px #03e9f4;
-        -webkit-box-reflect: below 1px linear-gradient(transparent, #0005);
-    }
-
 .social {
     display: flex;
     align-items: center;
@@ -147,19 +119,40 @@ a {
         text-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4, 0 0 50px #03e9f4, 0 0 200px #03e9f4;
     }
 
+.btn {
+    position: relative;
+    display: inline-block;
+    padding: 10px 30px;
+    margin-bottom: 50px;
+    background: none;
+    color: #fff;
+    border: solid #fff 0px;
+    margin-top: 10px;
+    transition: 0.5s;
+    overflow: hidden;
+    cursor: pointer;
+    text-decoration: none;
+    color: #fff;
+    font-size: 16px;
+}
+    .btn:hover {
+        background: #03e9f4;
+        color: #050801;
+        box-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4, 0 0 50px #03e9f4, 0 0 200px #03e9f4;
+        -webkit-box-reflect: below 1px linear-gradient(transparent, #0005);
+    }
 
-
-button:nth-child(1) {
+.btn:nth-child(1) {
     filter: hue-rotate(270deg);
 }
-button:nth-child(2) {
+.btn:nth-child(2) {
     filter: hue-rotate(110deg);
 }
-button span {
+.btn span {
     position: absolute;
     display: block;
 }
-    button span:nth-child(1) {
+    .btn span:nth-child(1) {
         top: 0;
         left: 0;
         width: 100%;
@@ -167,7 +160,7 @@ button span {
         background: linear-gradient(90deg,transparent,#03e9f4);
         animation: animate1 1s linear infinite;
     }
-    button span:nth-child(2) {
+    .btn span:nth-child(2) {
         top: -100%;
         right: 0;
         width: 2px;
@@ -176,7 +169,7 @@ button span {
         animation: animate2 1s linear infinite;
         animation-delay: 0.25s;
     }
-    button span:nth-child(3) {
+    .btn span:nth-child(3) {
         bottom: 0;
         right: 0;
         width: 100%;
@@ -185,7 +178,7 @@ button span {
         animation: animate3 1s linear infinite;
         animation-delay: 0.50s;
     }
-    button span:nth-child(4) {
+    .btn span:nth-child(4) {
         bottom: -100%;
         left: 0;
         width: 2px;
@@ -194,7 +187,6 @@ button span {
         animation: animate4 1s linear infinite;
         animation-delay: 0.75s;
     }
-
 @keyframes animate1 {
     0% {
         left: -100%;
@@ -230,4 +222,222 @@ button span {
     50%,100% {
         bottom: 100%;
     }
+}
+
+.pop-up {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0px 6px 30px rgba(0,0,0,0.4);
+    visibility: hidden;
+    opacity: 0;
+    transition: all .3s;
+    z-index: 10;
+    background-color: black;
+    color: white;
+}
+.content2 {
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    text-align: center;
+    position: relative;
+}
+
+.navigation {
+    position: absolute;
+    top: 130px;
+    left: 50%;
+    transform: translate(-50%);
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+    .navigation a {
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: 16px;
+        color: white;
+        padding: 5px 5px 0 5px;
+        border-bottom: 3px solid #72414100;
+        flex-basis: 20%;
+    }
+        .navigation a:hover {
+            transition: 0.3s;
+            border-bottom: 3px solid #4E204D;
+            
+        }
+    .navigation .selected {
+        border-bottom: 3px solid #4E204D;
+    }
+
+.btncontainer {
+    position: absolute;
+    top: 0px;
+    left: 50%;
+    transform: translate(-50%);
+    width: 100%;
+    display: flex;
+}
+    .btncontainer .btn2 {
+        position: relative;
+        padding: 10px 30px 10px 30px;
+        width: 36%;
+        margin: 10px 10px 0 0;
+        background: none;
+        color: #fff;
+        border: solid #fff 0px;
+        margin-top: 10px;
+        transition: 0.5s;
+        overflow: hidden;
+        cursor: pointer;
+        text-decoration: none;
+        color: #fff;
+        font-size: 16px;
+    }
+        .btncontainer .btn2:hover {
+    background: #03e9f4;
+    color: #050801;
+    box-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4, 0 0 50px #03e9f4, 0 0 200px #03e9f4;
+}
+
+.close {
+    padding: 5px 10px 5px 10px;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 1.1rem;
+    letter-spacing: 0.05rem;
+    color: white;
+    transition: all .4s;
+}
+    .close:hover {
+        cursor: pointer;
+        background: #03e9f4;
+        color: #050801;
+        box-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4, 0 0 50px #03e9f4, 0 0 200px #03e9f4;
+    }
+
+.profileImg{
+    position: absolute;
+    left: 50%;
+    margin-top: 20px;
+    transform: translateX(-50%);
+    height: 100px;
+    width: 100px;
+}
+    .profileImg img {
+        border-radius: 50%;
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+    }
+
+.popupContent{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 165px;
+    align-content: center;
+    width: 90%;
+    height: 70%;
+}
+    .popupContent .name {
+        font-size: 16px;
+        color: white;
+    }
+    .popupContent .jobT {
+        font-size: 10px;
+        color: gray;
+    }
+    .popupContent .intro {
+        padding-top: 15px;
+        font-size: 12px;
+        color: white;
+    }
+
+ul {
+    list-style-type: none;
+}
+
+h3 {
+    font-size: 16px;
+    color: white;
+    line-height: 130%;
+    letter-spacing: 0.07rem;
+}
+
+.CVbtn{
+    padding: 5px;
+}
+
+.CVEmail{
+    padding: 5px;
+}
+
+.open {
+    visibility: visible;
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+}
+
+img {
+    opacity: 1;
+    transition: 1s;
+    transition-delay: .3s;
+    transform: translateX(0px);
+}
+
+.card-timeline {
+    margin-top: 25px;
+    position: relative;
+}
+    .card-timeline:after {
+        background: linear-gradient( to bottom, #4E204D 90%, black 100% );
+        position: absolute;
+        left: 39%;
+        top: 0;
+        height: 100%;
+        width: 2px;
+        content: "";
+    }
+.card-item {
+    position: relative;
+    padding: 50px 50px 15px 100px;
+    z-index: 1;
+}
+    .card-item:last-child {
+        padding-bottom: 5px;
+    }
+    .card-item:after {
+        content: attr(data-year);
+        position: absolute;
+        top: 0;
+        left: 38.55%;
+        width: 8px;
+        height: 8px;
+        font-size: 12px;
+        line-height: 0.6;
+        border: 2px solid #4E204D;
+        text-indent: -110px;        
+        border-radius: 50%;
+        background: #4E204D;
+    }
+.card-item-title {
+    font-size: 14px;
+    position: absolute;
+    top: -5px;
+    left: 40.5%;
+}
+    .card-item-title span {
+        color: darkslategrey;
+    }
+.card-item-desc {
+    position: absolute;
+    top: 10px;
+    left: 40.5%;
+    font-size: 10px;
+    text-align: left;
+    color: gray;
 }
